pf: Fix breadcrumb size & spacing

--- a/src/base1/patternfly-overrides.less
+++ b/src/base1/patternfly-overrides.less
@@ -152,6 +152,11 @@
   box-shadow: var(--pf-global--BoxShadow--sm);
 }
 
+.breadcrumb {
+  padding: 1rem 0;
+  font-size: var(--pf-global--FontSize--sm);
+}
+
 :root {
   font-size: @font-size-base;
 
